--- a/notebooks/sample_ssrs_simulation_wy.ipynb
+++ b/notebooks/sample_ssrs_simulation_wy.ipynb
@@ -14,9 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -24,53 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from dataclasses import replace, asdict, fields"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from dataclasses import replace, asdict\n",
     "from ssrs import Terrain, Simulator, Config, WTK"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dir = os.path.join(os.path.abspath(os.path.curdir), 'output/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Config(run_name='default', out_dir='/Users/rsandhu/eagle_project/SSRS/notebooks/output', max_cores=8, sim_mode='uniform', southwest_lonlat=(42.78, -106.21), projected_crs='ESRI:102008', region_width_km=(30.0, 20.0), resolution=100.0, uniform_winddirn=270.0, uniform_windspeed=10.0, seasonal_start=(3, 1), seasonal_end=(12, 1), seasonal_timeofday='daytime', seasonal_count=8, snapshot_datetime=(2010, 6, 17, 13), wtk_source='AWS', wtk_orographic_height=100, wtk_thermal_height=100, wtk_interp_type='linear', track_direction='north', track_count=100, track_start_region=(5, 45, 0, 0), track_start_type='random', track_stochastic_nu=1.0, track_dirn_restrict=2, fig_height=6.0, fig_dpi=200, turbine_minimum_hubheight=50.0, turbine_mrkr_size=3.0, turbine_box_around_wfarm=False, presence_smoothing_radius=10)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# default ssrs configuration parameters\n",
-    "config_default = Config()\n",
-    "print(config_default)"
    ]
   },
   {
