resolved wms issues

--- a/notebooks/terrain_wy.ipynb
+++ b/notebooks/terrain_wy.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notebook demonstrating the importing of terrain layers from SRTM or 3DEP datasets for any given region in the contiguous US using ssrs.Terrain module"
+    "## Importing terrain layers from SRTM or 3DEP datasets using ssrs.Terrain module\n",
+    "### Region in Wyoming"
    ]
   },
   {
@@ -24,8 +25,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -249,6 +248,13 @@
     "    ax.plot(turb_xlocs, turb_ylocs, '1k', alpha=0.75, markersize=3.)\n",
     "    ax.set_title(key)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
