changed direction to degrees ,and track restriction to any number of previous moves

--- a/notebooks/ssrs_wy.ipynb
+++ b/notebooks/ssrs_wy.ipynb
@@ -84,7 +84,7 @@
     "    sim_mode='uniform',\n",
     "    uniform_winddirn=270.,\n",
     "    uniform_windspeed=10.,\n",
-    "    track_direction='north',\n",
+    "    track_direction=0.,\n",
     "    track_count = 500,\n",
     "    track_start_region=(20, 21, 0, 0)\n",
     ")\n",
