--- a/notebooks/hrrr_example.ipynb
+++ b/notebooks/hrrr_example.ipynb
@@ -16,17 +16,25 @@
     }
    ],
    "source": [
-    "from ssrs import Navigator"
+    "from ssrs import HRRR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f99278d3-4b91-425b-b6f5-b6749162f4d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏋🏻‍♂️ Found \u001b[32m2021-Feb-17 12:00 UTC F00\u001b[m [HRRR] [product=sfc] GRIB2 file from \u001b[31maws\u001b[m and index file from \u001b[31maws\u001b[m.                                                                                                                                                       \n"
+     ]
+    }
+   ],
    "source": [
-    "nav = Navigator('2021-02-17 12:00')"
+    "nav = HRRR('2021-02-17 12:00')"
    ]
   },
   {
