--- a/notebooks/terrain_wy.ipynb
+++ b/notebooks/terrain_wy.ipynb
@@ -261,9 +261,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_this",
+   "display_name": "ssrs_env",
    "language": "python",
-   "name": "test_this"
+   "name": "ssrs_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -275,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
