minor changes in demo and readme

--- a/workshop/ssrs_readme.ipynb
+++ b/workshop/ssrs_readme.ipynb
@@ -15,8 +15,7 @@
    "id": "c60df74f",
    "metadata": {},
    "source": [
-    "This document provides instructions on installing SSRS on your local machine and running the notebooks provided in this workshop folder of the Github repository. These instructions have been tested for Unix OS (Linux/MacOS) and may\n",
-    "require slight modification for Windows OS. \n",
+    "This document provides instructions on installing SSRS on your local machine and running the ssrs_demo notebook provided in this workshop folder of the Github repository. These instructions have been tested for Unix OS (Linux/MacOS) and may require slight modification for Windows OS. \n",
     "\n",
     "Github repository: https://github.com/NREL/SSRS \n",
     "\n",
@@ -92,7 +91,7 @@
    "id": "0834c033",
    "metadata": {},
    "source": [
-    "6) Check if conda environment was created successfully, this command should list myenv as one of the conda envs\n",
+    "6) Check if conda environment was created successfully, this command should list myenv as one of the conda environments\n",
     "```console\n",
     "rsandhu@mac$ conda env list\n",
     "```"
@@ -103,7 +102,7 @@
    "id": "317db445",
    "metadata": {},
    "source": [
-    "7) Activate the installed conda environments\n",
+    "7) Activate the installed conda environment named myenv\n",
     "```console\n",
     "rsandhu@mac$ conda activate myenv\n",
     "```"
@@ -114,7 +113,7 @@
    "id": "b1e317ac",
    "metadata": {},
    "source": [
-    "8) Install SSRS (use the -e flag before . if editing the SSRS source code)\n",
+    "8) Install SSRS\n",
     "```console\n",
     "rsandhu@mac$ pip install .\n",
     "```"
@@ -136,7 +135,7 @@
    "id": "3f2d5382",
    "metadata": {},
    "source": [
-    "#### Running Jupyter notebooks from myenv"
+    "#### Running Jupyter notebook"
    ]
   },
   {
@@ -188,7 +187,7 @@
    "id": "c0464c5a",
    "metadata": {},
    "source": [
-    "4) The jupyter notebook will open to the SSRS direcotry. Go to the workshop or the notebooks folder and then open any notebook (.ipynb files), and make sure the kernel is selected to be myenv (Kernel -> Change kernel -> myenv)."
+    "4) The jupyter notebook will open to the SSRS directory. Go to the workshop or the notebooks folder and then open any notebook (.ipynb files), and make sure the kernel is selected to be myenv (Kernel -> Change kernel -> myenv)."
    ]
   },
   {
@@ -196,7 +195,8 @@
    "id": "84038ae5",
    "metadata": {},
    "source": [
-    "#### Getting API key for using NREL's WTK dataset in SSRS"
+    "#### Getting API key for using NREL's WTK dataset in SSRS\n",
+    "You wil need to get an API key to use NREL's WTK data set, which is required in the snapshot and seasonal mode of SSRS. Follow these steps to get access to WTK:"
    ]
   },
   {
