--- a/notebooks/terrain_wy.ipynb
+++ b/notebooks/terrain_wy.ipynb
@@ -92,6 +92,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-778570.6891451213, 368802.4538518435, -718570.6891451213, 418802.4538518435)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bounds"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
